package impl;

public class DataSet {
     // --- ATRIBUTOS ---
    private int ID;

    // --- METODOS ---
    // CONSTURCTORES

    public DataSet(int ID) {
        this.ID = ID;
    }

    // GET
    public int getID() {
        return ID;
    }
}
